@@ -24,8 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     outputs:
-      versions: ${{ steps.transform.outputs.versions }}
-      modules: ${{ steps.transform.outputs.modules }}
+      permutations: ${{ steps.transform.outputs.permutations }}
     steps:
 
       - uses: actions/checkout@v3
@@ -43,8 +42,19 @@ jobs:
               core.setFailed(`Error loading './.ci/tav.json': ${err}`)
               return
             }
-            core.setOutput('modules', matrix.modules)
-            core.setOutput('versions', matrix.versions)
+            const permutations = []
+            for (const mod of matrix.modules) {
+              for (const nv of matrix.versions) {
+                if (mod.minVersion && nv >= mod.minVersion) {
+                  permutations.push(`${mod.name} ${nv}`)
+                }
+              }
+            }
+            if (permutations.length > 256) {
+              core.setFailed(`Matrix size (${permutations.length}) is bigger than the limit (256)`)
+              return
+            }
+            core.setOutput('permutations', permutations)
 
   test-tav:
     needs: prepare-matrix
@@ -57,10 +67,9 @@ jobs:
         # A job matrix limit is 256. We do some grouping of TAV modules to
         # stay under that limit.
         # https://docs.github.com/en/actions/learn-github-actions/usage-limits-billing-and-administration
-        node: ${{ fromJSON(needs.prepare-matrix.outputs.versions) }}
-        module: ${{ fromJSON(needs.prepare-matrix.outputs.modules) }}
+        module_and_node: ${{ fromJSON(needs.prepare-matrix.outputs.permutations) }}
     steps:
       - uses: actions/checkout@v3
-      - run: .ci/scripts/test.sh -b "release" -t "${{ matrix.module }}" "${{ matrix.node }}"
+      - run: .ci/scripts/test.sh -b "release" -t ${{ matrix.module_and_node }}
         env:
           ELASTIC_APM_CONTEXT_MANAGER: ''
